--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="offers about-sub">
         <i class="fa-solid fa-tag about-logo"></i> 
         <p><b>exclusive offers</b></p>
-       <p>Now enjoy the benefits of LG exclusive offers. Subscribe LG.com to remain updated on latest offers</p>
+       <p>Now enjoy the benefits of exclusive offers. Subscribe heartymart.com to remain updated on latest offers</p>
 
     </div>
     <div class="shipping about-sub ">
