--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
           <ul class="response">
             <li><a class="response-item" href="#">Home</a></li>
             <li><a class="response-item" href="#">Profile</a></li>
-            <li><a class="response-item" href="#">About</a></li>
+            <li><a class="response-item" href="#">Food Products</a></li>
+            <li><a class="response-item" href="#">Clay Products</a></li>
+            <!-- <li><a class="response-item" href="#">IT</a></li> -->
             <li><a class="response-item" href="#">Contacts</a></li>
           </ul>
         </div>
@@ -167,6 +169,10 @@
           </div>
         </div>
       </div>
+      <div class="move"><marquee>
+        At Hearty Mart, our ethos of ‘Faith, Hope, and Development’ guides everything we do. We believe that by putting our clients’ needs first and fostering a culture of innovation, we can deliver solutions that truly exceed expectations.
+
+      </marquee></div>
       <!-- brandings -->
       <div class="ad"><h3 style="text-align: center; color: #E00000;">Our Social Media Platforms:</h3></div>
       
